@@ -731,4 +731,10 @@ x^6 + 10/7*x^5 - 867/49*x^4 - 76/245*x^3 + 3148/35*x^2 - 25944/245*x + 48771
 [0]
 [x + (-314226370217524044*y + 1473852319020386314), x + (314226370217524044*
 y - 1473852319020386314)]~
-Total time spent: 8061
+[Mod(-1/55*y^3 + 1/110*y^2 - 57/110*y + 1/110, y^4 + 57*y^2 + 661), Mod(1/55
+*y^3 + 1/110*y^2 + 57/110*y + 1/110, y^4 + 57*y^2 + 661)]
+[Mod(-1/55*y^3 + 1/110*y^2 - 57/110*y + 1/110, y^4 + 57*y^2 + 661), Mod(1/55
+*y^3 + 1/110*y^2 + 57/110*y + 1/110, y^4 + 57*y^2 + 661)]
+[Mod(-1/55*y^3 + 1/110*y^2 - 57/110*y + 1/110, y^4 + 57*y^2 + 661), Mod(1/55
+*y^3 + 1/110*y^2 + 57/110*y + 1/110, y^4 + 57*y^2 + 661)]
+Total time spent: 11080
