@@ -106,3 +106,11 @@ test(polcyclo(211),18446744073709551667)
 nfroots(a^2+1,x^2)
 
 do(y^2-22,x^2+926246528884912528275985458927067632*y-4344481316563541186659879867597013188)
+
+\\#1841
+K = nfinit (y^4 + 57*y^2 + 661);
+P = Mod((1/11*y^2 + 56/11)*x^2 + x + 3, K.pol);
+nfroots (K, P)
+nfroots (K, P / pollead(P))
+nfroots (K, P / (pollead(P)*y))
+
