@@ -1,6 +1,9 @@
 # $Id$
 Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/
 
+Done for version 2.8.1 (released ??/??/2016):
+    1- nfroots(non-monic t_POL) => wrong result [#1841]
+
 Done for version 2.8.0 (released 12/08/2016):
 
   Fixed
